crates/templates/tests/snapshots/root__impl-22.snap
---
source: crates/templates/tests/root.rs
description: Function global environment variables
expression: output
---
root() {
  # Parse environment variables
  
  if [[ -z "${BAR:-}" ]]; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing required environment variable: " "BAR" >&2
    usage >&2
    exit 1
  fi
  if [[ -n "${BAZ:-}" ]]; then
    args['baz']="${BAZ:-}"
  fi

  # Parse command arguments
  parse_root "$@"

  echo "No implementation body found for root function"
}


